force-app/main/default/objects/sugati__Target__c/sugati__Target__c.object-meta.xml
<CustomObject>
    <description>A list of targets company wide</description>
    <label>Target And Commission</label>
    <nameField>
        <displayFormat>TC-{0000000000}</displayFormat>
        <label>Target And Commision ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets And Commisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>