force-app/main/default/objects/sugati__Target__c/fields/sugati__Actual_Commission_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>sugati__Actual_Commission_Read_Only__c</fullName>
    <description>Total commission for Sales Consultant within the Start and End Date of the Target.</description>
    <formula>sugati__TC_Actual_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total commission for Sales Consultant.</inlineHelpText>
    <label>Actual Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>