force-app/main/default/objects/sugati__Target__c/fields/sugati__T_Actual_Bookings__c.field-meta.xml
<CustomField>
    <fullName>sugati__T_Actual_Bookings__c</fullName>
    <label>Actual Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>