force-app/main/default/objects/sugati__Target__c/fields/sugati__T_Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>sugati__T_Actual_Revenue__c</fullName>
    <label>Actual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>