force-app/main/default/objects/sugati__Target__c/fields/sugati__T_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__T_End_Date__c</fullName>
    <description>Target End Date.</description>
    <label>Booking To</label>
    <type>Date</type>
</CustomField>