force-app/main/default/objects/sugati__Target__c/fields/sugati__T_Holiday_Season__c.field-meta.xml
<CustomField>
    <fullName>sugati__T_Holiday_Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holiday Season</label>
    <referenceTo>sugati__Holiday_Season__c</referenceTo>
    <relationshipName>Targets</relationshipName>
    <type>Lookup</type>
</CustomField>