force-app/main/default/objects/sugati__Target__c/fields/sugati__T_Holiday_Season_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__T_Holiday_Season_Start_Date__c</fullName>
    <formula>sugati__T_Holiday_Season__r.sugati__HS_Start_Date__c</formula>
    <label>Holiday Season Start Date</label>
    <type>Date</type>
</CustomField>