force-app/main/default/objects/sugati__Target__c/fields/sugati__T_Sales_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__T_Sales_Commission__c</fullName>
    <label>Sales Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>