force-app/main/default/objects/sugati__Target__c/fields/sugati__T_Sales_Consultant__c.field-meta.xml
<CustomField>
    <fullName>sugati__T_Sales_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Targets</relationshipName>
    <type>Lookup</type>
</CustomField>