force-app/main/default/objects/sugati__Target__c/fields/sugati__T_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__T_Start_Date__c</fullName>
    <description>Target Start Date.</description>
    <label>Booking From</label>
    <type>Date</type>
</CustomField>