force-app/main/default/objects/sugati__Target__c/fields/sugati__T_Target_Bookings__c.field-meta.xml
<CustomField>
    <fullName>sugati__T_Target_Bookings__c</fullName>
    <description>Target number of bookings.</description>
    <inlineHelpText>Target number of bookings.</inlineHelpText>
    <label>Target Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>