force-app/main/default/objects/sugati__Target__c/fields/sugati__T_Target_For_Pax__c.field-meta.xml
<CustomField>
    <fullName>sugati__T_Target_For_Pax__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Target total number of people booked for holidays.</description>
    <inlineHelpText>Target total number of people booked for holidays.</inlineHelpText>
    <label>Target For Pax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>