force-app/main/default/objects/sugati__Target__c/fields/sugati__T_Target_Revenue__c.field-meta.xml
<CustomField>
    <fullName>sugati__T_Target_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Target sales revenue value.</description>
    <inlineHelpText>Target sales revenue value.</inlineHelpText>
    <label>Target Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>