force-app/main/default/objects/sugati__Target__c/fields/sugati__T_Target_Year__c.field-meta.xml
<CustomField>
    <fullName>sugati__T_Target_Year__c</fullName>
    <label>Target Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>