force-app/main/default/objects/sugati__Target__c/fields/sugati__TA_Actual_Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__TA_Actual_Booking_Number__c</fullName>
    <description>Total number of bookings made within the Start and End Date of the Target.</description>
    <inlineHelpText>Total number of bookings.</inlineHelpText>
    <label>Actual Booking Number</label>
    <summarizedField>sugati__Target_Actual_Number__c.sugati__TAN_Actual_Booking_Number__c</summarizedField>
    <summaryForeignKey>sugati__Target_Actual_Number__c.sugati__TAN_Target__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>