force-app/main/default/objects/sugati__Target__c/fields/sugati__TA_Actual_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__TA_Actual_Margin__c</fullName>
    <label>Actual Margin %</label>
    <summarizedField>sugati__Target_Actual_Number__c.sugati__TAN_Actual_Margin__c</summarizedField>
    <summaryForeignKey>sugati__Target_Actual_Number__c.sugati__TAN_Target__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>