force-app/main/default/objects/sugati__Target__c/fields/sugati__TA_Actual_Pax__c.field-meta.xml
<CustomField>
    <fullName>sugati__TA_Actual_Pax__c</fullName>
    <description>Total number of people booked (including group members) within the Start and End Date of the Target.</description>
    <inlineHelpText>Total number of people booked.</inlineHelpText>
    <label>Actual Pax</label>
    <summarizedField>sugati__Target_Actual_Number__c.sugati__TAN_Actual_Pax__c</summarizedField>
    <summaryForeignKey>sugati__Target_Actual_Number__c.sugati__TAN_Target__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>