force-app/main/default/objects/sugati__Target__c/fields/sugati__TA_Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>sugati__TA_Actual_Revenue__c</fullName>
    <description>Total Sales Revenue for bookings made within the Start and End Date of the Target.</description>
    <inlineHelpText>Total Sales Revenue for bookings.</inlineHelpText>
    <label>Actual Revenue</label>
    <summarizedField>sugati__Target_Actual_Number__c.sugati__TAN_Actual_Revenue__c</summarizedField>
    <summaryForeignKey>sugati__Target_Actual_Number__c.sugati__TAN_Target__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>