force-app/main/default/objects/sugati__Target__c/fields/sugati__TA_Ad_Hoc__c.field-meta.xml
<CustomField>
    <fullName>sugati__TA_Ad_Hoc__c</fullName>
    <label>Ad Hoc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>