force-app/main/default/objects/sugati__Target__c/fields/sugati__TA_Average_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__TA_Average_Margin__c</fullName>
    <description>Average Margin percentage for bookings made within the Start and End Date of the Target.</description>
    <formula>sugati__TA_Actual_Margin__c/sugati__TA_Actual_Booking_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average Margin % for bookings.</inlineHelpText>
    <label>Average Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>