force-app/main/default/objects/sugati__Target__c/fields/sugati__TA_Booking_No_Target__c.field-meta.xml
<CustomField>
    <fullName>sugati__TA_Booking_No_Target__c</fullName>
    <description>Compare Actual Booking Number against Target Bookings.</description>
    <formula>sugati__TA_Actual_Booking_Number__c/sugati__T_Target_Bookings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Compare Actual Booking Number against Target Bookings.</inlineHelpText>
    <label>Booking No Target %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>