force-app/main/default/objects/sugati__Target__c/fields/sugati__TA_G_teed__c.field-meta.xml
<CustomField>
    <fullName>sugati__TA_G_teed__c</fullName>
    <label>G&apos;teed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>