force-app/main/default/objects/sugati__Target__c/fields/sugati__TA_Last_Year_Total__c.field-meta.xml
<CustomField>
    <fullName>sugati__TA_Last_Year_Total__c</fullName>
    <label>Last Year Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>