force-app/main/default/objects/sugati__Target__c/fields/sugati__TA_Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>sugati__TA_Revenue_Target__c</fullName>
    <description>Compare Actual Revenue against Target Revenue.</description>
    <formula>sugati__TA_Actual_Revenue__c/sugati__T_Target_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Compare Actual Revenue against Target Revenue.</inlineHelpText>
    <label>Revenue Target %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>