force-app/main/default/objects/sugati__Target__c/fields/sugati__TA_Target_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__TA_Target_Margin__c</fullName>
    <description>Target margin in percentage.</description>
    <inlineHelpText>Target margin in percentage.</inlineHelpText>
    <label>Target Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>