force-app/main/default/objects/sugati__Target__c/fields/sugati__TC_Actual_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Actual_Commission__c</fullName>
    <label>Actual Commission Trigger</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>