force-app/main/default/objects/sugati__Target__c/fields/sugati__TC_Commission_Target_Percent__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Commission_Target_Percent__c</fullName>
    <description>Compare Actual Commission against Target Commission.</description>
    <formula>(sugati__Actual_Commission_Read_Only__c/sugati__TC_Target_Commission__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Compare Actual Commission against Target Commission.</inlineHelpText>
    <label>Commission Target %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>