force-app/main/default/objects/sugati__Target__c/fields/sugati__TC_Margin_Target__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Margin_Target__c</fullName>
    <description>Compare Actual Margin value against Target margin value.</description>
    <formula>sugati__TC_Actual_Margin__c/sugati__TC_Target_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Compare Actual Margin against Target margin.</inlineHelpText>
    <label>Margin Target %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>