force-app/main/default/objects/sugati__Target__c/fields/sugati__TC_Pax_Target__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Pax_Target__c</fullName>
    <description>Compare Actual Pax against Target for Pax.</description>
    <formula>sugati__TA_Actual_Pax__c /  sugati__T_Target_For_Pax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Compare Actual Pax against Target for Pax.</inlineHelpText>
    <label>Pax Target %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>