force-app/main/default/objects/sugati__Target__c/fields/sugati__TC_Target_Commission__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Target_Commission__c</fullName>
    <description>Target Commission value for Sales Consultant.</description>
    <inlineHelpText>Target Commission value for Sales Consultant.</inlineHelpText>
    <label>Target Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>