force-app/main/default/objects/sugati__Target__c/fields/sugati__TC_Target_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Target_Margin__c</fullName>
    <description>Target margin value.</description>
    <inlineHelpText>Target margin value.</inlineHelpText>
    <label>Target Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>