force-app/main/default/objects/sugati__Target__c/fields/sugati__TC_Total_Commission_Earned__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Total_Commission_Earned__c</fullName>
    <label>Total Commission Earned Trigger</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>