force-app/main/default/objects/sugati__Target__c/fields/sugati__TC_Total_Commission_Earned_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>sugati__TC_Total_Commission_Earned_Read_Only__c</fullName>
    <formula>sugati__TC_Total_Commission_Earned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commission Earned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>