force-app/main/default/objects/sugati__Target__c/recordTypes/sugati__Target.recordType-meta.xml
<RecordType>
    <fullName>sugati__Target</fullName>
    <active>true</active>
    <label>Target</label>
</RecordType>