force-app/main/default/objects/sugati__Target__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>sugati__T_Sales_Consultant__c</columns>
    <columns>sugati__T_Start_Date__c</columns>
    <columns>sugati__T_End_Date__c</columns>
    <columns>sugati__T_Sales_Commission__c</columns>
    <columns>sugati__TC_Total_Commission_Earned_Read_Only__c</columns>
    <columns>sugati__T_Target_Revenue__c</columns>
    <columns>sugati__TA_Revenue_Target__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>